--- a/site/guide_input/index.html
+++ b/site/guide_input/index.html
@@ -136,7 +136,7 @@
 <h2 id="ld-reference-data-1000-genomes">LD Reference Data: 1000 Genomes</h2>
 <p>BridgePRS estimates SNP-specific LD in the clumping step from an population target data in PLINK binary format.  By default, the main 
 BridgePRS includes a sample LD reference panel (<strong>BRIDGEDIR/data/1000G_sample</strong>) for population super-groups <strong>AFR</strong> and <strong>EUR</strong> that is 
-suitable for the <a href="quikstart.md">quick start tutorial</a>. </p>
+suitable for the <a href="../quikstart_prep/">quick start tutorial</a>. </p>
 <p>A folder containing the full 1000 Genomes LD reference panel for populations <strong>AFR</strong>, <strong>EUR</strong>, <strong>EAS</strong>, <strong>SAS</strong>, and <strong>AMR</strong> can be downloaded 
 <a href="https://github.com/clivehoggart/BridgePRS/archive/refs/heads/main.zip">here</a> and unzipped into <strong>BRIDGEDIR/data/1000G_ref</strong> to enable full usage 
 of BridgePRS. </p>
