--- a/site/index.html
+++ b/site/index.html
@@ -168,12 +168,12 @@ bioRxiv (2023). doi: 10.1101/2023.02.17.528938. </p>
 </div>
 <h2 id="contact">Contact</h2>
 <p>For questions about the methodology, this website, or our manuscript please contact <a href="http://www.pauloreilly.info/">Dr Clive Hoggart</a>, 
-<a href="http://www.pauloreilly.info/">Tade</a>, or <a href="http://www.pauloreilly.info/">Dr Paul O'Reilly</a>. </p>
+<a href="http://www.pauloreilly.info/">Dr Tade Souaiaia</a>, or <a href="http://www.pauloreilly.info/">Dr Paul O'Reilly</a>. </p>
 <h2 id="issues">Issues</h2>
 <p>This wiki should cover basic usage for BridgePRS. 
 If you have problems, please feel free to submit an issues <a href="https://github.com/tadesouaiaia/BridgePRS-guide/issues">here</a> or visit our <a href="https://groups.google.com/forum/#!forum/bridgePRS">google group</a>.</p>
 <h2 id="acknowledgements">Acknowledgements</h2>
-<p>We would like to thank Brian Fulton Howard for his expert programming advice. </p>
+<p>We would like to thank Brian Fulton-Howard for his expert programming advice. </p>
               
             </div>
           </div><footer>
@@ -227,5 +227,5 @@ If you have problems, please feel free to submit an issues <a href="https://gith
 
 <!--
 MkDocs version : 1.3.1
-Build Date UTC : 2023-10-02 21:51:33.421129+00:00
+Build Date UTC : 2023-10-03 04:07:10.633753+00:00
 -->
